.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Suite_Case__c.object
<CustomObject>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to match test suite cases from other platforms.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__File_Path__c</fullName>
        <description>Used to store relative or absolute file paths for test suite cases that exist as files somewhere else</description>
        <inlineHelpText>Used to store relative or absolute file paths for test suite cases that exist as files somewhere else</inlineHelpText>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Describes the order of the test case within the test suite.</description>
        <inlineHelpText>Describes the order of the test case within the test suite.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>provar__Test_Case__c</referenceTo>
        <relationshipLabel>Test Suites</relationshipLabel>
        <relationshipName>Test_Suite_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Test_Suite__c</fullName>
        <label>Test Suite</label>
        <referenceTo>provar__Test_Suite__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Suite_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Suite Case</label>
    <nameField>
        <displayFormat>TSC-{0000000}</displayFormat>
        <label>Test Suite Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Suite Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>